--- a/Plastikama Technology Industry/assets/css/shortcodes.css
+++ b/Plastikama Technology Industry/assets/css/shortcodes.css
@@ -511,7 +511,7 @@
 
 /* Style */
 .half-background.style-1 {
-  background-image: url("../img/gallery/gallery-1-960x560.jpg");
+  background-image: url("../img/gallery/employee2.jpg");
 }
 .half-background.style-2 {
   background-image: url("../img/bg-services-1-420x330.jpg");
