--- a/assets/css/shortcodes.css
+++ b/assets/css/shortcodes.css
@@ -51,11 +51,11 @@
   letter-spacing: 0px;
 }
 .themesflat-button.bg-accent {
-  background-color: #0a2351;
+  background-color: #32174d;
 }
 .themesflat-button.bg-white {
   background-color: #fff;
-  color: #0a2351;
+  color: #0a3489;
 }
 .themesflat-button.bg-light-white {
   background-color: #f2f2f2;
