--- a/style.css
+++ b/style.css
@@ -1064,8 +1064,8 @@ body.page #main-content {
   margin-right: -15px;
 }
 .themesflat-row.gutter-30 > [class*="col"] {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .themesflat-row .span_1_of_4 {
@@ -1742,13 +1742,13 @@ body.page #main-content {
   z-index: 9999;
 }
 #site-header.is-fixed.is-small .wrap-inner {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 #site-header.is-fixed.is-small .header-search-icon,
 #site-header.is-fixed.is-small .nav-top-cart-wrapper .nav-cart-trigger,
 #site-header.is-fixed.is-small #main-nav > ul > li > a {
-  line-height: 76px;
+  line-height: 50px;
 }
 
 /* Style 1 */
@@ -2936,7 +2936,7 @@ body.page #main-content {
 }
 #footer-widgets .widget.widget_text span.text {
   font-family: "Montserrat", sans-serif;
-  font-size: 12px;
+  font-size: 11px;
   color: rgba(255, 255, 255, 0.8);
   line-height: 14px;
   overflow: hidden;
@@ -3303,6 +3303,16 @@ body.page #main-content {
   box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.02);
 }
 
+.top-client-img {
+  width: 200px;
+}
+.home-second-title {
+  margin-bottom: 30px;
+}
+.home-btns {
+  margin-bottom: 50px;
+  margin-top: 10px;
+}
 /* Media Queries
 -------------------------------------------------------------- */
 @media only screen and (max-width: 1199px) {
@@ -3444,6 +3454,9 @@ body.page #main-content {
 @media only screen and (max-width: 767px) {
   #site-header .wrap-inner {
     padding: 20px 0px;
+  }
+  .themesflat-row.gutter-30 > [class*="col"] {
+    padding-top: 50px;
   }
 
   #bottom .bottom-bar-content,
