--- a/style.css
+++ b/style.css
@@ -487,7 +487,7 @@ p > video {
   margin: 100px;
 }
 .certification-img-box {
-  border: solid 1px #414141;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .certification-img {
   width: 420px;
